--- a/nps_test/Views/Base.lproj/Main.storyboard
+++ b/nps_test/Views/Base.lproj/Main.storyboard
@@ -253,33 +253,33 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3Sd-c1-lzj">
-                                        <rect key="frame" x="20" y="60" width="379" height="226"/>
+                                        <rect key="frame" x="0.0" y="60" width="429" height="226"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="226" id="wvB-ab-D0a"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="E2A-fv-WGP" customClass="UPCarouselFlowLayout" customModule="UPCarouselFlowLayout">
-                                            <size key="itemSize" width="85" height="150"/>
+                                            <size key="itemSize" width="147" height="192"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ScoreCell" id="TTK-nF-i13" customClass="NpsScoreCollectionViewCell" customModule="nps_test" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="38" width="85" height="150"/>
+                                                <rect key="frame" x="0.0" y="17" width="130" height="192"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="85" height="150"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="192"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KvU-Nn-eN0">
-                                                            <rect key="frame" x="0.0" y="0.0" width="85" height="85"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="125" height="125"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="85" id="FUn-O2-e6y"/>
+                                                                <constraint firstAttribute="width" constant="125" id="FUn-O2-e6y"/>
                                                                 <constraint firstAttribute="width" secondItem="KvU-Nn-eN0" secondAttribute="height" multiplier="1:1" id="Hc8-gI-Etb"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o2O-5X-sUc">
-                                                            <rect key="frame" x="35" y="95" width="15.5" height="45"/>
+                                                            <rect key="frame" x="55" y="135" width="15.5" height="47"/>
                                                             <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="22"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -288,12 +288,13 @@
                                                 </view>
                                                 <constraints>
                                                     <constraint firstItem="o2O-5X-sUc" firstAttribute="top" secondItem="KvU-Nn-eN0" secondAttribute="bottom" constant="10" id="CrN-Lp-dDW"/>
-                                                    <constraint firstAttribute="trailing" secondItem="KvU-Nn-eN0" secondAttribute="trailing" id="i98-je-Bev"/>
+                                                    <constraint firstAttribute="trailing" secondItem="KvU-Nn-eN0" secondAttribute="trailing" priority="999" id="i98-je-Bev"/>
                                                     <constraint firstItem="o2O-5X-sUc" firstAttribute="centerX" secondItem="KvU-Nn-eN0" secondAttribute="centerX" id="miE-5A-qyp"/>
                                                     <constraint firstItem="KvU-Nn-eN0" firstAttribute="top" secondItem="TTK-nF-i13" secondAttribute="top" id="sDl-yt-KKD"/>
                                                     <constraint firstAttribute="bottom" secondItem="o2O-5X-sUc" secondAttribute="bottom" constant="10" id="v98-1T-eRS"/>
                                                     <constraint firstItem="KvU-Nn-eN0" firstAttribute="leading" secondItem="TTK-nF-i13" secondAttribute="leading" id="xhH-xV-VBQ"/>
                                                 </constraints>
+                                                <size key="customSize" width="130" height="192"/>
                                                 <connections>
                                                     <outlet property="scoreImageView" destination="KvU-Nn-eN0" id="DJd-ai-mr8"/>
                                                     <outlet property="scoreLabel" destination="o2O-5X-sUc" id="FRl-me-9Q5"/>
@@ -309,12 +310,12 @@
                                 <color key="backgroundColor" red="0.10712375491857529" green="0.38513189554214478" blue="0.64316868782043457" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="LEu-ZM-Ral" firstAttribute="top" secondItem="UyQ-fc-sdp" secondAttribute="top" constant="20" id="Ba8-Zf-AlG"/>
-                                    <constraint firstItem="3Sd-c1-lzj" firstAttribute="leading" secondItem="UyQ-fc-sdp" secondAttribute="leading" constant="20" id="GBG-Yv-FFr"/>
+                                    <constraint firstItem="3Sd-c1-lzj" firstAttribute="leading" secondItem="UyQ-fc-sdp" secondAttribute="leading" id="GBG-Yv-FFr"/>
                                     <constraint firstAttribute="bottom" secondItem="3Sd-c1-lzj" secondAttribute="bottom" constant="20" id="Kiz-uX-J2Z"/>
                                     <constraint firstItem="3Sd-c1-lzj" firstAttribute="top" secondItem="LEu-ZM-Ral" secondAttribute="bottom" constant="20" id="TNP-Ck-565"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LEu-ZM-Ral" secondAttribute="trailing" constant="15" id="XCZ-4b-npn"/>
                                     <constraint firstItem="LEu-ZM-Ral" firstAttribute="centerX" secondItem="UyQ-fc-sdp" secondAttribute="centerX" id="gfN-70-WK8"/>
-                                    <constraint firstAttribute="trailing" secondItem="3Sd-c1-lzj" secondAttribute="trailing" constant="15" id="hWF-xh-ifS"/>
+                                    <constraint firstAttribute="trailing" secondItem="3Sd-c1-lzj" secondAttribute="trailing" constant="-15" id="hWF-xh-ifS"/>
                                     <constraint firstItem="LEu-ZM-Ral" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UyQ-fc-sdp" secondAttribute="leading" constant="15" id="rMD-Z2-QOm"/>
                                 </constraints>
                             </view>
